--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "tsx watch src/server.ts",
-    "vercel-build": "prisma generate",
-    "prisma:generate": "prisma generate"
+    "vercel-build": "prisma generate"
   },
   "keywords": [],
   "author": "",
