--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "loteamento-api",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "",
   "main": "index.js",
   "scripts": {
@@ -19,6 +19,7 @@
   "dependencies": {
     "@fastify/cors": "^9.0.1",
     "@prisma/client": "^5.11.0",
+    "@prisma/engines": "^5.11.0",
     "fastify": "^4.26.2",
     "tsx": "^4.7.1"
   }
